<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="director">Director</string>
    <string name="year">Year</string>
    <string name="runtime">Runtime</string>
    <string name="add_title">Title</string>
    <string name="add_movie">Add new movie to database</string>
    <string name="add_btn">Add</string>
</resources>
